# Twitter-Sentiment-Analysis

./: README.md  pyproject.toml  requirements.txt  run_app.bat
Notebook/: test_sentiment_model.ipynb  train_sentiment_model.ipynb
models/sentiment_model/: config.json  model.safetensors
src/: app.py
