[project]
name = "twitter-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lime>=0.2.0.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "streamlit>=1.44.1",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "wordcloud>=1.9.4",
]
